<package format="2">
  <name>puma_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for puma_description</p>
    <p>This package contains configuration data, 3D models and launch files for puma_description robot</p>
  </description>
  
  <author>Diego Rosa</author>
  <maintainer email="diegoggrosa@gmail.com" />
  <license>free</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>rosbag</depend>
  <depend>urdf</depend>
  
  <export>
    <architecture_independent />
  </export>
  
</package>
